--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -142,3 +142,28 @@ button[data-slot="accordion-trigger"]>svg {
 .clip {
 	clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
 }
+
+.shadow-dance-text {
+	font-size: 4rem;
+	color: #fff;
+	text-shadow:
+		5px 5px 0 #ff005e,
+		10px 10px 0 #00d4ff;
+	animation: shadow-dance 2s infinite;
+}
+
+@keyframes shadow-dance {
+
+	0%,
+	100% {
+		text-shadow:
+			5px 5px 0 #ff005e,
+			10px 10px 0 #00d4ff;
+	}
+
+	50% {
+		text-shadow:
+			-5px -5px 0 #00d4ff,
+			-10px -10px 0 #ff005e;
+	}
+}
